--- a/iletisim.html
+++ b/iletisim.html
@@ -4,6 +4,23 @@
 <head>
   <meta charset="utf-8">
   <title>NBF - İletişim</title>
+  <style>
+    body {
+      background-color: #143F6B85;
+    }
+
+    hr {
+      border: 10px;
+      color: #EEEEEE60;
+      border-style: none none dotted;
+      height: 2px;
+      width: 10%;
+    }
+
+    img {
+      height: 200px;
+    }
+  </style>
 </head>
 
 <body>
@@ -42,9 +59,9 @@
   </form>
 
   <!-- yeni form-->
- <h3>Bana Ulaşın</h3>
+  <h3>Bana Ulaşın</h3>
 
-   <form class="" action="mailto:namibaranfirat@gmail.com" method="post" enctype="text/plain">
+  <form class="" action="mailto:namibaranfirat@gmail.com" method="post" enctype="text/plain">
     <label for="">Ad-Soyad</label>
     <input type="text" name="yourName" value="">
     <br>
@@ -62,7 +79,7 @@
     <br>
     <input type="submit" name="" value="Gönder">
 
-    </form>
+  </form>
 
 </body>
 
