--- a/hobi.html
+++ b/hobi.html
@@ -4,6 +4,23 @@
 <head>
   <meta charset="utf-8">
   <title>NFB - Hobilerim</title>
+  <style>
+    body {
+      background-color: #143F6B85;
+    }
+
+    hr {
+      border: 10px;
+      color: #EEEEEE60;
+      border-style: none none dotted;
+      height: 2px;
+      width: 10%;
+    }
+
+    img {
+      height: 200px;
+    }
+  </style>
 </head>
 
 <body>
