--- a/index.html
+++ b/index.html
@@ -7,19 +7,29 @@
   <meta charset="utf-8" http-equiv="refresh" content="60">
   <title>NBF</title>
   <style>
-    html,
-    body img.one {
-      height: 65%;
-      width: 65%;
+    body {
+      background-color: #143F6B85;
     }
+
+    hr {
+      border: 10px ;
+      color: #EEEEEE60;
+      border-style: none none dotted;
+      height: 2px;
+      width: 10%;
+    }
+
+img {
+  height: 200px;
+}
   </style>
 </head>
 
 <body>
-  <table cellspacing="10">
+  <table>
     <tr>
       <td>
-        <img class="one" src="baran.jpg" alt="KlavyeliKumanda Efendi" width="300" height="300">
+        <img src="baran.jpg" alt="KlavyeliKumanda Efendi">
       </td>
       <td>
         <h1>Nami Baran FIRAT Şahsi Site Şeysi</h1>
@@ -46,7 +56,7 @@
     <p>
       Çay <span>🫖</span> ve kahve <span>☕</span> içmeyi severim. Videografi ve Grafik tasarım yapmaya çalışırım. Standarttan genelde şaşmam
     </p>
-    <hr />
+    <hr>
     <p>
     <h3>Yapabildiklerim</h4>
       <em>
