--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- boş satırlar kasten bırakılmıştır. daha derli toplu görünmektedir. -->
 
 <head>
-  <meta charset="utf-8" http-equiv="refresh" content="60">
+  <meta charset="utf-8">
   <title>NBF</title>
   <style>
     body {
