--- a/index.html
+++ b/index.html
@@ -6,23 +6,8 @@
 <head>
   <meta charset="utf-8">
   <title>NBF</title>
-  <style>
-    body {
-      background-color: #143F6B85;
-    }
+  <link rel="stylesheet" href="/css/style.css">
 
-    hr {
-      border: 10px ;
-      color: #EEEEEE60;
-      border-style: none none dotted;
-      height: 2px;
-      width: 10%;
-    }
-
-img {
-  height: 200px;
-}
-  </style>
 </head>
 
 <body>
