--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>NBF</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
